--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,13 @@
 
 @custom-variant dark (&:is(.dark *));
 
+html, body {
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
+
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
